# ChangeLog for net-misc/openvpn
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openvpn/ChangeLog,v 1.143 2009/04/15 22:00:31 cedk Exp $

  15 Apr 2009; Cédric Krier <cedk@gentoo.org> files/up.sh:
  Fix up.sh to add search for all domains for bug #259382

*openvpn-2.1_rc15 (03 Jan 2009)

  03 Jan 2009; Cédric Krier <cedk@gentoo.org> -openvpn-2.1_rc13.ebuild,
  +openvpn-2.1_rc15.ebuild:
  Version bump

  02 Nov 2008; Cédric Krier <cedk@gentoo.org>
  +files/openvpn-2.1_rc13-peercred.patch, openvpn-2.1_rc13.ebuild:
  Add peercred patch for bug #245181

*openvpn-2.1_rc13 (01 Nov 2008)

  01 Nov 2008; Cédric Krier <cedk@gentoo.org>
  -files/openvpn-2.1_rc9-tests.patch, -openvpn-2.1_rc9.ebuild,
  +openvpn-2.1_rc13.ebuild:
  Version bump

  01 Nov 2008; Cédric Krier <cedk@gentoo.org> files/openvpn-2.1.init:
  Fix init script for bug #234667

  28 Sep 2008; Cédric Krier <cedk@gentoo.org>
  +files/openvpn-2.1_rc9-tests.patch, openvpn-2.1_rc9.ebuild:
  Add tests patch for bug #236877

  02 Aug 2008; Cédric Krier <cedk@gentoo.org> files/openvpn-2.1.init:
  Add --script-security 2 for bug #233657

*openvpn-2.1_rc9 (01 Aug 2008)

  01 Aug 2008; Cédric Krier <cedk@gentoo.org>
  -files/openvpn-2.1_rc7-tap.patch, -openvpn-2.1_rc7-r2.ebuild,
  +openvpn-2.1_rc9.ebuild:
  Version bump

*openvpn-2.0.9 (14 May 2008)

  14 May 2008; Cédric Krier <cedk@gentoo.org>
  +files/openvpn-2.0.9-pam.patch, +files/openvpn-2.0.9-persistent.patch,
  +openvpn-2.0.9.ebuild:
  Version bump

  13 May 2008; Cédric Krier <cedk@gentoo.org> metadata.xml:
  Take ownership, after Alon Bar-Lev left

*openvpn-2.1_rc7-r2 (18 Apr 2008)

  18 Apr 2008; Alon Bar-Lev <alonbl@gentoo.org>
  files/openvpn-2.1_rc7-tap.patch, -openvpn-2.1_rc7-r1.ebuild,
  +openvpn-2.1_rc7-r2.ebuild:
  Fix tun (again), bug#218129, thanks to Sigmatador

*openvpn-2.1_rc7-r1 (16 Apr 2008)

  16 Apr 2008; Alon Bar-Lev <alonbl@gentoo.org>