@@ -43,7 +43,7 @@ if [ "${PEER_DNS}" != "no" ]; then
 		DNS="# Generated by openvpn for interface ${dev}\n"
 		if [ -n "${SEARCH}" ] ; then
 			DNS="${DNS}search ${DOMAIN} ${SEARCH}\n"
-		else
+		elif [ -n "${DOMAIN}" ]; then
 			DNS="${DNS}domain ${DOMAIN}\n"
 		fi
 		DNS="${DNS}${NS}"
